name:                riemann
version:             0.0.0.0
synopsis:            A Riemann client for Haskell
-- description:         
homepage:            https://github.com/tel/riemann-hs
license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2013 Joseph Abrahamson
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules: 
    Network.Monitoring.Riemann
    Network.Monitoring.Riemann.Lenses
  other-modules:
    Network.Monitoring.Riemann.Proto
    Network.Monitoring.Riemann.Proto.Attribute
    Network.Monitoring.Riemann.Proto.Event
    Network.Monitoring.Riemann.Proto.Msg
    Network.Monitoring.Riemann.Proto.Query
    Network.Monitoring.Riemann.Proto.State
  build-depends:       
    base              >= 4.5.0,
    protocol-buffers  >= 2.0.12,
    network           >= 2.4.0.0,
    lens              >= 3.7.0.0,
    errors            >= 1.3.0,
    bytestring        >= 0.9.0.0,
    text              >= 0.11.2.3,
    containers        >= 0.5.0.0,
    protocol-buffers-descriptor >= 2.0.12
  default-language:   Haskell2010

test-suite doctest
  type:            exitcode-stdio-1.0
  ghc-options:     -threaded
  hs-source-dirs:  test
  main-is:         Doctest.hs
  build-depends: 
    base,
    directory,
    doctest,
    filepath
  default-language:   Haskell2010

test-suite property
  type:            exitcode-stdio-1.0
  ghc-options:     -threaded
  hs-source-dirs:  test
  main-is:         Property.hs
  build-depends: 
    base,
    QuickCheck >= 2.5.1.0,
    test-framework,
    test-framework-quickcheck2,
    riemann
  default-language:   Haskell2010

test-suite unit
  type:            exitcode-stdio-1.0
  ghc-options:     -threaded
  hs-source-dirs:  test
  main-is:         Unit.hs
  build-depends: 
    base,
    HUnit,
    test-framework,
    test-framework-hunit,
    riemann
  default-language:   Haskell2010